Add images file path to JSON output (#117)