@@ -5,10 +5,9 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
-package org.opendataloader.pdf.html;
+package org.opendataloader.pdf.utils;
 
 import org.junit.jupiter.api.Test;
-import org.opendataloader.pdf.api.Config;
 import org.opendataloader.pdf.containers.StaticLayoutContainers;
 import org.verapdf.wcag.algorithms.entities.content.ImageChunk;
 import org.verapdf.wcag.algorithms.entities.geometry.BoundingBox;
@@ -17,36 +16,33 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-class HtmlGeneratorTest {
+class ImagesUtilsTest {
 
     @Test
-    void testWriteImageCreatesFiguresDirectory() throws IOException {
+    void testCreateImagesDirectory() throws IOException {
         StaticLayoutContainers.clearContainers();
         // Given
-        Path tempDir = Files.createTempDirectory("htmlgen-test");
+        Path tempDir = Files.createTempDirectory("test");
         File testPdf = new File("../../samples/pdf/lorem.pdf");
         String outputFolder = tempDir.toString();
-        Config config = new Config();
 
         // When
-        HtmlGenerator htmlGenerator = new HtmlGenerator(testPdf, outputFolder, config);
-
         try {
-            StaticLayoutContainers.resetImageIndex();
-            ImageChunk image = new ImageChunk(new BoundingBox(0,0, 0, 100, 100));
-            htmlGenerator.writeImage(image);
-            // Then - verify figures directory was created in writeImage()
-            String expectedFiguresDirName = testPdf.getName().substring(0, testPdf.getName().length() - 4) + "_figures";
-            Path expectedFiguresPath = Path.of(outputFolder, expectedFiguresDirName);
+            Path path = Paths.get(testPdf.getPath());
+            StaticLayoutContainers.setImagesDirectory(outputFolder + File.separator + path.getFileName().toString().substring(0, path.getFileName().toString().length() - 4) + "_images");
+            ImagesUtils imagesUtils = new ImagesUtils();
+            imagesUtils.createImagesDirectory(StaticLayoutContainers.getImagesDirectory());
+            // Then - verify images directory was created in createImagesDirectory()
+            String expectedImagesDirName = testPdf.getName().substring(0, testPdf.getName().length() - 4) + "_images";
+            Path expectedImagesPath = Path.of(outputFolder, expectedImagesDirName);
 
-            assertTrue(Files.exists(expectedFiguresPath), "Figures directory should be created in constructor");
-            assertTrue(Files.isDirectory(expectedFiguresPath), "Figures path should be a directory");
+            assertTrue(Files.exists(expectedImagesPath), "Images directory should be created in constructor");
+            assertTrue(Files.isDirectory(expectedImagesPath), "Images path should be a directory");
         } finally {
-            StaticLayoutContainers.closeContrastRatioConsumer();
-            htmlGenerator.close();
             // Cleanup
             Files.walk(tempDir)
                 .sorted((a, b) -> b.compareTo(a))
@@ -67,29 +63,25 @@ class HtmlGeneratorTest {
         Path tempDir = Files.createTempDirectory("htmlgen-test");
         File testPdf = new File("../../samples/pdf/lorem.pdf");
         String outputFolder = tempDir.toString();
-        Config config = new Config();
-
         // When
-        HtmlGenerator htmlGenerator = new HtmlGenerator(testPdf, outputFolder, config);
-
         try {
             // Then - if ContrastRatioConsumer wasn't initialized,
             // it would be null and cause NPE when used
-            assertNull(htmlGenerator.contrastRatioConsumer);
-            StaticLayoutContainers.resetImageIndex();
-            ImageChunk image = new ImageChunk(new BoundingBox(0,0, 0, 100, 100));
+            Path path = Paths.get(testPdf.getAbsolutePath());
+            ImagesUtils imagesUtils = new ImagesUtils();
+            assertNull(imagesUtils.getContrastRatioConsumer());
+            StaticLayoutContainers.setImagesDirectory(outputFolder + File.separator + path.getFileName().toString().substring(0, path.getFileName().toString().length() - 4) + "_images");
+            ImageChunk imageChunk = new ImageChunk(new BoundingBox(0));
             // Initializing contrastRatioConsumer in writeImage()
-            htmlGenerator.writeImage(image);
-            assertNotNull(htmlGenerator.contrastRatioConsumer);
-
-            // Verify HTML writer was created
-            Path htmlPath = Path.of(outputFolder, "lorem.html");
-            // HTML file is created by FileWriter in constructor but is empty until writeToHtml
-            assertTrue(Files.exists(htmlPath) || true, "HtmlGenerator initialized successfully");
+            imagesUtils.writeImage(imageChunk, testPdf.getAbsolutePath(),"");
+            assertNotNull(imagesUtils.getContrastRatioConsumer());
+            // Verify file was created
+            Path pngPath = Path.of(StaticLayoutContainers.getImagesDirectory(), "imageFile1.png");
+            // PNG file is created
+            assertTrue(Files.exists(pngPath), "PNG file created successfully");
         } finally {
-            StaticLayoutContainers.closeContrastRatioConsumer();
-            htmlGenerator.close();
             // Cleanup
+            StaticLayoutContainers.closeContrastRatioConsumer();
             Files.walk(tempDir)
                 .sorted((a, b) -> b.compareTo(a))
                 .forEach(p -> {
